--- a/FrontEnd/User Cycle/Create-Event-1.html
+++ b/FrontEnd/User Cycle/Create-Event-1.html
@@ -629,6 +629,8 @@
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
     <script src="assets/MyScripts/Event_Create_Proccess.js"></script>
+    <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
