--- a/FrontEnd/User Cycle/instructor-courses.html
+++ b/FrontEnd/User Cycle/instructor-courses.html
@@ -510,6 +510,8 @@
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
      <script src="assets/MyScripts/OrganizerEventsTable.js"></script> 
+     <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
