--- a/FrontEnd/User Cycle/instructor-dashboard.html
+++ b/FrontEnd/User Cycle/instructor-dashboard.html
@@ -682,6 +682,8 @@
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
     <script src="assets/MyScripts/OrganizerDashboard.js"></script> 
+    <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
