--- a/FrontEnd/User Cycle/instructor-details.html
+++ b/FrontEnd/User Cycle/instructor-details.html
@@ -708,6 +708,8 @@
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
+        <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
