--- a/FrontEnd/User Cycle/instructor-enrolled-courses.html
+++ b/FrontEnd/User Cycle/instructor-enrolled-courses.html
@@ -1038,6 +1038,8 @@
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
+        <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
