--- a/FrontEnd/User Cycle/instructor-history.html
+++ b/FrontEnd/User Cycle/instructor-history.html
@@ -532,6 +532,8 @@
     </script>
  
     <script src="assets/MyScripts/OrganizerTicketsSales.js"></script>
+    <script src="assets/MyScripts/auth-check.js"></script> 
+
 
     
 </body>
