--- a/FrontEnd/User Cycle/instructor-setting.html
+++ b/FrontEnd/User Cycle/instructor-setting.html
@@ -594,6 +594,8 @@
     </script>
     <script src="assets/MyScripts/updateOrganizerProfile.js" ></script>
     <script src="assets/MyScripts/PaymentMethod.js" > </script>
+    <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
