--- a/FrontEnd/User Cycle/student-dashboard.html
+++ b/FrontEnd/User Cycle/student-dashboard.html
@@ -571,6 +571,8 @@
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
     <script src="assets/MyScripts/Attendee-Profile-Dashboard.js"></script>  
+    <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
