--- a/FrontEnd/User Cycle/student-review.html
+++ b/FrontEnd/User Cycle/student-review.html
@@ -516,7 +516,8 @@
     <script src="assets/js/aos.js"></script>
     <script src="assets/js/main.js"></script>
     <script src="assets/MyScripts/MySimpleTickets.js"></script>
-  
+    <script src="assets/MyScripts/auth-check.js"></script> 
+
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
