--- a/FrontEnd/User Cycle/student-setting.html
+++ b/FrontEnd/User Cycle/student-setting.html
@@ -610,6 +610,8 @@
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
     <script src="assets/MyScripts/UpdateUserProfile.js"></script> 
+    <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
