--- a/FrontEnd/User Cycle/instructor-review.html
+++ b/FrontEnd/User Cycle/instructor-review.html
@@ -603,6 +603,8 @@
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
+        <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
