--- a/FrontEnd/User Cycle/student-enrolled-courses.html
+++ b/FrontEnd/User Cycle/student-enrolled-courses.html
@@ -525,7 +525,8 @@
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
- 
+        <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
