--- a/FrontEnd/User Cycle/student-history.html
+++ b/FrontEnd/User Cycle/student-history.html
@@ -764,6 +764,8 @@
     <script>
         SVGInject(document.querySelectorAll("img.injectable"));
     </script>
+        <script src="assets/MyScripts/auth-check.js"></script> 
+
 </body>
 
 
