--- a/FrontEnd/Admin Cycle/Events_Requests.html
+++ b/FrontEnd/Admin Cycle/Events_Requests.html
@@ -46,7 +46,7 @@
 
             <!-- LOGO -->
             <div class="logo-box">
-                <a href="index.html" class="logo text-center">
+                <a href="index.html" class="logo text-center logo-dark">
                     <span class="logo-lg">
                         <img src="assets/images/logo-dark.png" alt="" height="24">
                     </span>
@@ -55,7 +55,16 @@
                     </span>
                 </a>
             </div>
+
+            <ul class="list-unstyled topnav-menu topnav-menu-left m-0">
+                <li>
+                    <button class="button-menu-mobile">
+                        <i class="mdi mdi-menu"></i>
+                    </button>
+                </li>
+            </ul>
         </div>
+        <!-- end Topbar -->
 
         <!-- Left Sidebar -->
         <div class="left-side-menu">
@@ -79,7 +88,7 @@
                         </a>
                     </li>
                     <li>
-                        <a href="event-requests.html" class="active">
+                        <a href="Events_Requests.html" class="active">
                             <i class="fe-clipboard"></i>
                             <span> Event Requests </span>
                         </a>
