--- a/FrontEnd/Admin Cycle/categories.html
+++ b/FrontEnd/Admin Cycle/categories.html
@@ -25,8 +25,8 @@
 
 <body>
     <div id="wrapper">
-        <!-- Topbar Start -->
-        <div class="navbar-custom">
+         <!-- Topbar Start -->
+         <div class="navbar-custom">
             <ul class="list-unstyled topnav-menu float-right mb-0">
                 <li class="dropdown notification-list">
                     <a class="nav-link dropdown-toggle nav-user mr-0" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
@@ -55,6 +55,14 @@
                     </span>
                 </a>
             </div>
+
+            <ul class="list-unstyled topnav-menu topnav-menu-left m-0">
+                <li>
+                    <button class="button-menu-mobile">
+                        <i class="mdi mdi-menu"></i>
+                    </button>
+                </li>
+            </ul>
         </div>
         <!-- end Topbar -->
 
@@ -115,7 +123,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="page-title-box">
-                                <div class="page-title-right">
+                                <div class="page-title-right text-right">
                                     <button type="button" class="btn btn-primary waves-effect waves-light" data-toggle="modal" data-target="#categoryModal">
                                         <i class="mdi mdi-plus-circle mr-1"></i> Add Category
                                     </button>
