--- a/FrontEnd/User Cycle/index.html
+++ b/FrontEnd/User Cycle/index.html
@@ -90,46 +90,8 @@
                                 </div>
                                 <div class="tgmenu__navbar-wrap tgmenu__main-menu d-none d-xl-flex">
                                     <ul class="navigation">
-                                        <li class="menu-item-has-children"><a href="#">Home</a>
-                                            <ul class="sub-menu mega-menu">
-                                                <li>
-                                                    <ul class="list-wrap mega-sub-menu">
-                                                        <li>
-                                                            <a href="index.html">Main Home</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="index-2.html">Online Course <span class="tg-badge">Hot</span></a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="index-3.html">University <span class="tg-badge-two">New</span></a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="index-4.html">Yoga Instructor<span class="tg-badge-two">New</span></a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="index-5.html">Kindergarten<span class="tg-badge">Hot</span></a>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                                <li>
-                                                    <ul class="list-wrap mega-sub-menu">
-                                                        <li>
-                                                            <a href="index-6.html">Language Academy<span class="tg-badge-two">New</span></a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="index-7.html">Business Coach <span class="tg-badge-two">New</span></a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="index-8.html">Kitchen Coach <span class="tg-badge">Hot</span></a>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                                <li>
-                                                    <div class="mega-menu-img">
-                                                        <a href="courses.html"><img src="assets/img/others/mega_menu_img.jpg" alt="img"></a>
-                                                    </div>
-                                                </li>
-                                            </ul>
+                                        <li><a href="#">Home</a>
+                                            
                                         </li>
                                         <li class="active"><a href="courses.html">Events</a>
                                         </li>
@@ -401,50 +363,7 @@
         </section>
         <!-- categories-area-end -->
 
-        <!-- brand-area -->
-        <!-- <div class="brand-area">
-            <div class="container-fluid">
-                <div class="marquee_mode">
-                    <div class="brand__item">
-                        <a href="#"><img src="assets/img/brand/brand01.png" alt="brand"></a>
-                        <img src="assets/img/icons/brand_star.svg" alt="star">
-                    </div>
-                    <div class="brand__item">
-                        <a href="#"><img src="assets/img/brand/brand02.png" alt="brand"></a>
-                        <img src="assets/img/icons/brand_star.svg" alt="star">
-                    </div>
-                    <div class="brand__item">
-                        <a href="#"><img src="assets/img/brand/brand03.png" alt="brand"></a>
-                        <img src="assets/img/icons/brand_star.svg" alt="star">
-                    </div>
-                    <div class="brand__item">
-                        <a href="#"><img src="assets/img/brand/brand04.png" alt="brand"></a>
-                        <img src="assets/img/icons/brand_star.svg" alt="star">
-                    </div>
-                    <div class="brand__item">
-                        <a href="#"><img src="assets/img/brand/brand05.png" alt="brand"></a>
-                        <img src="assets/img/icons/brand_star.svg" alt="star">
-                    </div>
-                    <div class="brand__item">
-                        <a href="#"><img src="assets/img/brand/brand06.png" alt="brand"></a>
-                        <img src="assets/img/icons/brand_star.svg" alt="star">
-                    </div>
-                    <div class="brand__item">
-                        <a href="#"><img src="assets/img/brand/brand07.png" alt="brand"></a>
-                        <img src="assets/img/icons/brand_star.svg" alt="star">
-                    </div>
-                    <div class="brand__item">
-                        <a href="#"><img src="assets/img/brand/brand04.png" alt="brand"></a>
-                        <img src="assets/img/icons/brand_star.svg" alt="star">
-                    </div>
-                    <div class="brand__item">
-                        <a href="#"><img src="assets/img/brand/brand03.png" alt="brand"></a>
-                        <img src="assets/img/icons/brand_star.svg" alt="star">
-                    </div>
-                </div>
-            </div>
-        </div> -->
-        <!-- brand-area-end -->
+      
 
         <!-- about-area -->
         <section class="about-area tg-motion-effects section-py-120">
