--- a/FrontEnd/Admin Cycle/Events.html
+++ b/FrontEnd/Admin Cycle/Events.html
@@ -126,7 +126,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="page-title-box">
-                                <div class="page-title-right">
+                                <div class="page-title-right text-right">
                                     <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#eventModal">
                                         <i class="mdi mdi-plus-circle"></i> Add Event
                                     </button>
