--- a/FrontEnd/Admin Cycle/Plans.html
+++ b/FrontEnd/Admin Cycle/Plans.html
@@ -120,7 +120,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="page-title-box">
-                                <div class="page-title-right">
+                                <div class="page-title-right text-right">
                                     <button type="button" class="btn btn-primary waves-effect waves-light" data-toggle="modal" data-target="#planModal">
                                         <i class="mdi mdi-plus-circle mr-1"></i> Add Plan
                                     </button>
