--- a/FrontEnd/Admin Cycle/Tickets.html
+++ b/FrontEnd/Admin Cycle/Tickets.html
@@ -122,7 +122,7 @@
                     <div class="row">
                         <div class="col-12">
                             <div class="page-title-box">
-                                <div class="page-title-right">
+                                <div class="page-title-right text-right">
                                     <button type="button" class="btn btn-primary waves-effect waves-light" data-toggle="modal" data-target="#ticketModal">
                                         <i class="mdi mdi-plus-circle mr-1"></i> Add Ticket
                                     </button>
